wsn/projects/dicio-backup/gateway/out.txt


-------- begin --------
avr-gcc (GCC) 4.9.1
Copyright (C) 2014 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.


Compiling: main.c
avr-gcc -g -c -mmcu=atmega128rfa1 -Os -I. -g -D NANORK -D NODE_ADDR=0 -Os -funsigned-char -funsigned-bitfields -fpack-struct -fshort-enums -Wall -Wa,-adhlns=main.lst -I../../../src/net/bmac -I../../../projects/dicio/utility -I../../../src/platform/include -I../../../src/platform/firefly3/include -I../../../src/radio/rf231_soc/include -I../../../src/radio/rf231_soc/hal/atmega128rfa1 -I../../../src/radio/rf231_soc/platform/firefly3 -I../../../src/drivers/include -I../../../src/drivers/platform/firefly3/include -I../../../src/kernel/include -I../../../src/kernel/hal/include -std=gnu99 -fgnu89-inline -DCC2420DB main.c -o main.o
In file included from ../../../src/platform/include/ulib.h:32:0,
                 from ../../../src/kernel/include/nrk_time.h:33,
                 from ../../../src/kernel/include/nrk.h:38,
                 from main.c:11:
../../../src/platform/firefly3/include/nrk_pin_define.h:126:0: warning: "ANT_0" redefined
 #define ANT_0  1 // invalid 
 ^
In file included from /opt/local/avr/include/avr/io.h:164:0,
                 from ../../../src/platform/firefly3/include/include.h:76,
                 from ../../../src/kernel/include/nrk_time.h:32,
                 from ../../../src/kernel/include/nrk.h:38,
                 from main.c:11:
/opt/local/avr/include/avr/iom128rfa1.h:4152:0: note: this is the location of the previous definition
 #define ANT_0                           2
 ^
In file included from ../../../src/platform/include/ulib.h:32:0,
                 from ../../../src/kernel/include/nrk_time.h:33,
                 from ../../../src/kernel/include/nrk.h:38,
                 from main.c:11:
../../../src/platform/firefly3/include/nrk_pin_define.h:127:0: warning: "ANT_1" redefined
 #define ANT_1  2 // invalid 
 ^
In file included from /opt/local/avr/include/avr/io.h:164:0,
                 from ../../../src/platform/firefly3/include/include.h:76,
                 from ../../../src/kernel/include/nrk_time.h:32,
                 from ../../../src/kernel/include/nrk.h:38,
                 from main.c:11:
/opt/local/avr/include/avr/iom128rfa1.h:4151:0: note: this is the location of the previous definition
 #define ANT_1                           1
 ^
main.c: In function ‘rx_node_task’:
main.c:206:7: warning: passing argument 2 of ‘parse_msg’ from incompatible pointer type
       parse_msg(&rx_packet, &net_rx_buf, len);
       ^
In file included from main.c:26:0:
../../../projects/dicio/utility/parser.h:16:6: note: expected ‘char *’ but argument is of type ‘uint8_t (*)[116]’
 void parse_msg(packet *parsed_packet, char *src, uint8_t len);
      ^
main.c:207:19: warning: pointer targets in passing argument 2 of ‘bmac_rx_pkt_get’ differ in signedness [-Wpointer-sign]
       local_buf = bmac_rx_pkt_get(&len, &rssi);
                   ^
In file included from main.c:19:0:
../../../src/net/bmac/bmac.h:119:10: note: expected ‘int8_t *’ but argument is of type ‘uint8_t *’
 uint8_t *bmac_rx_pkt_get(uint8_t *len, int8_t *rssi);
          ^
main.c: In function ‘rx_serv_task’:
main.c:309:7: warning: passing argument 2 of ‘parse_msg’ from incompatible pointer type
       parse_msg(&rx_packet, &serv_rx_buf, serv_rx_index);
       ^
In file included from main.c:26:0:
../../../projects/dicio/utility/parser.h:16:6: note: expected ‘char *’ but argument is of type ‘uint8_t (*)[116]’
 void parse_msg(packet *parsed_packet, char *src, uint8_t len);
      ^
main.c: In function ‘tx_cmd_task’:
main.c:364:10: error: redeclaration of ‘tx_packet’ with no linkage
   packet tx_packet;
          ^
main.c:363:10: note: previous declaration of ‘tx_packet’ was here
   packet tx_packet;
          ^
main.c:391:7: error: ‘tx_cmd_queue_size’ undeclared (first use in this function)
       tx_cmd_queue_size = cmd_tx_queue.size;
       ^
main.c:391:7: note: each undeclared identifier is reported only once for each function it appears in
main.c:416:7: warning: passing argument 1 of ‘assemble_packet’ from incompatible pointer type
       assemble_packet(&net_tx_buf, &tx_packet);
       ^
In file included from main.c:22:0:
../../../projects/dicio/utility/assembler.h:14:6: note: expected ‘uint8_t *’ but argument is of type ‘uint8_t (*)[116]’
 void assemble_packet(uint8_t *tx_buf, packet *tx);
      ^
main.c:419:49: warning: pointer targets in passing argument 1 of ‘strlen’ differ in signedness [-Wpointer-sign]
       val = bmac_tx_pkt_nonblocking(net_tx_buf, strlen(net_tx_buf));
                                                 ^
In file included from ../../../src/platform/firefly3/include/include.h:79:0,
                 from ../../../src/kernel/include/nrk_time.h:32,
                 from ../../../src/kernel/include/nrk.h:38,
                 from main.c:11:
/opt/local/avr/include/string.h:133:15: note: expected ‘const char *’ but argument is of type ‘uint8_t *’
 extern size_t strlen(const char *) __ATTR_PURE__;
               ^
main.c:360:12: warning: variable ‘val’ set but not used [-Wunused-but-set-variable]
   uint16_t val;
            ^
main.c: In function ‘tx_node_task’:
main.c:490:7: warning: passing argument 1 of ‘assemble_packet’ from incompatible pointer type
       assemble_packet(&net_tx_buf, &tx_packet);
       ^
In file included from main.c:22:0:
../../../projects/dicio/utility/assembler.h:14:6: note: expected ‘uint8_t *’ but argument is of type ‘uint8_t (*)[116]’
 void assemble_packet(uint8_t *tx_buf, packet *tx);
      ^
main.c:492:49: warning: pointer targets in passing argument 1 of ‘strlen’ differ in signedness [-Wpointer-sign]
       val = bmac_tx_pkt_nonblocking(net_tx_buf, strlen(net_tx_buf));
                                                 ^
In file included from ../../../src/platform/firefly3/include/include.h:79:0,
                 from ../../../src/kernel/include/nrk_time.h:32,
                 from ../../../src/kernel/include/nrk.h:38,
                 from main.c:11:
/opt/local/avr/include/string.h:133:15: note: expected ‘const char *’ but argument is of type ‘uint8_t *’
 extern size_t strlen(const char *) __ATTR_PURE__;
               ^
main.c:435:12: warning: variable ‘val’ set but not used [-Wunused-but-set-variable]
   uint16_t val;
            ^
main.c: In function ‘nrk_create_taskset’:
main.c:547:3: warning: passing argument 2 of ‘nrk_task_set_stk’ from incompatible pointer type
   nrk_task_set_stk(&RX_SERV_TASK, rx_serv_task, NRK_APP_STACKSIZE);
   ^
In file included from main.c:11:0:
../../../src/kernel/include/nrk.h:62:6: note: expected ‘NRK_STK *’ but argument is of type ‘void (*)(void)’
 void nrk_task_set_stk( nrk_task_type *task, NRK_STK stk_base[], uint16_t stk_size );
      ^
make: *** [main.o] Error 1
